--- a/awards/2015.html
+++ b/awards/2015.html
@@ -167,29 +167,6 @@
             </li>
         </ul>
 
-        <!-- <hr>
-
-        <div class="cf award-details">
-            <div class="award-details__info">
-                <h2>A walkthrough of the evening</h2>
-                <p>Our evening will feature each finalist of the two categories pitching their startup to both the audience and judging panel.</p>
-                <p>Each finalist gets five minutes to pitch followed by 10 mins Q&amp;A with our judging panel.</p>
-                <p>Once all pitches have finished the judges will retire to deliberate on their decision and food (in addition to our open bar) will be provided for everybody in attendance.</p>
-                <p>After time for food to go down and the judges to have made their decision we will announce the winners of each category and prizes will be presented. This will be then followed by networking and discussion on the events of the evening.</p>
-            </div>
-            <div class="award-details__info">
-                <h2>The perfect pitch</h2>
-                <p>When entering your startup or (if made a finalist) making your pitch to the judges consider the following key items should be presented:</p>
-                <ul>
-                    <li>Business overview</li>
-                    <li>Market information i.e. opportunity and competition</li>
-                    <li>Management team</li>
-                    <li>Key achievements</li>
-                    <li>Growth strategy (management needed, investment &amp; exit strategy)</li>
-                </ul>
-                <p>The trick is to keep the application and pitch concise. You have five minutes to impress, make the best of them.</p>
-            </div>
-        </div> -->
 
         <hr>
 
@@ -199,15 +176,15 @@
                 <p class="lede">Each sponsor has provided £500 toward the prize for the winner of the New Startup of the Year award.</p>
             </header>
             <ul class="sponsor-list">
-                <li class="sponsor">
-                    <a href="http://www.first-enterprise.co.uk/" target="_blank">
-                        <img class="sponsor__logo" src="../img/awards-2015/logo-firstenterprise.png" alt="First Enterprise">
+                <li class="sponsor third">
+                    <a href="http://www.first-enterprise.co.uk/" target="_blank" class="Icon-wrap">
+                        <div class="sponsor-logo__front Mid first-enterprise"></div>
                     </a>
                     <p class="sponsor__content"><a href="http://www.first-enterprise.co.uk/" target="_blank">First Enterprise</a> is a leading business support organisation which supports the needs of pre-start and existing business owners in Nottingham and the East Midlands.</p>
                 </li>
-                <li class="sponsor">
-                    <a href="https://www.acceleratehub.com" target="_blank">
-                        <img class="sponsor__logo" src="../img/awards-2015/logo-accelerate.png" alt="Accelerate">
+                <li class="sponsor third">
+                    <a href="https://www.acceleratehub.com" target="_blank" class="Icon-wrap">
+                        <div class="sponsor-logo__front Mid accelerate"></div>
                     </a>
                     <p class="sponsor__content"><a href="https://www.acceleratehub.com" target="_blank">Accelerate Nottingham</a> is the first technology and growth-oriented flexible work space in the city offering its members thoughtfully-designed, collaborative space within Blenheim Chalcot’s exciting business community.</p>
                 </li>
@@ -222,9 +199,9 @@
                 <p class="lede">Providing services-in-kind to help each of the award winners.</p>
             </header>
             <ul class="sponsor-list">
-                <li class="sponsor">
-                    <a href="http://www.securityaware.biz/" target="_blank">
-                        <img class="sponsor__logo" src="../img/awards-2015/logo-securityaware.png" alt="Security Aware">
+                <li class="sponsor third">
+                    <a href="http://www.securityaware.biz/" target="_blank" class="Icon-wrap">
+                        <div class="sponsor-logo__front Mid security-aware"></div>
                     </a>
                     <p class="sponsor__content"><a href="http://www.securityaware.biz/" target="_blank">Security Aware</a> is a data security and compliance specialist, helping businesses keep information safe through monitoring, testing and training.</p>
                 </li>
