--- a/awards/2016.html
+++ b/awards/2016.html
@@ -194,13 +194,13 @@
             <ul class="sponsor-list">
                 <li class="sponsor">
                     <a href="http://www.first-enterprise.co.uk/" target="_blank">
-                        <img class="sponsor__logo" src="../img/awards-2015/logo-firstenterprise.png" alt="First Enterprise">
+                        <img class="sponsor-logo" src="../img/awards-2015/logo-firstenterprise.png" alt="First Enterprise">
                     </a>
                     <p class="sponsor__content"><a href="http://www.first-enterprise.co.uk/" target="_blank">First Enterprise</a> is a leading business support organisation which supports the needs of pre-start and existing business owners in Nottingham and the East Midlands.</p>
                 </li>
                 <li class="sponsor">
                     <a href="https://www.acceleratehub.com" target="_blank">
-                        <img class="sponsor__logo" src="../img/awards-2015/logo-accelerate.png" alt="Accelerate">
+                        <img class="sponsor-logo" src="../img/awards-2015/logo-accelerate.png" alt="Accelerate">
                     </a>
                     <p class="sponsor__content"><a href="https://www.acceleratehub.com" target="_blank">Accelerate Nottingham</a> is the first technology and growth-oriented flexible work space in the city offering its members thoughtfully-designed, collaborative space within Blenheim Chalcot’s exciting business community.</p>
                 </li>
@@ -217,7 +217,7 @@
             <ul class="sponsor-list">
                 <li class="sponsor">
                     <a href="http://www.securityaware.biz/" target="_blank">
-                        <img class="sponsor__logo" src="../img/awards-2015/logo-securityaware.png" alt="Security Aware">
+                        <img class="sponsor-logo" src="../img/awards-2015/logo-securityaware.png" alt="Security Aware">
                     </a>
                     <p class="sponsor__content"><a href="http://www.securityaware.biz/" target="_blank">Security Aware</a> is a data security and compliance specialist, helping businesses keep information safe through monitoring, testing and training.</p>
                 </li>
