Added new sponsor and added new judge

--- a/awards/2015.html
+++ b/awards/2015.html
@@ -176,15 +176,15 @@
                 <p class="lede">Each sponsor has provided £500 toward the prize for the winner of the New Startup of the Year award.</p>
             </header>
             <ul class="sponsor-list">
-                <li class="sponsor third">
+                <li class="sponsor Large">
                     <a href="http://www.first-enterprise.co.uk/" target="_blank" class="Icon-wrap">
-                        <div class="sponsor-logo__front Mid first-enterprise"></div>
+                        <div class="Sponsor-logo Mid first-enterprise"></div>
                     </a>
                     <p class="sponsor__content"><a href="http://www.first-enterprise.co.uk/" target="_blank">First Enterprise</a> is a leading business support organisation which supports the needs of pre-start and existing business owners in Nottingham and the East Midlands.</p>
                 </li>
-                <li class="sponsor third">
+                <li class="sponsor Large">
                     <a href="https://www.acceleratehub.com" target="_blank" class="Icon-wrap">
-                        <div class="sponsor-logo__front Mid accelerate"></div>
+                        <div class="Sponsor-logo Mid accelerate"></div>
                     </a>
                     <p class="sponsor__content"><a href="https://www.acceleratehub.com" target="_blank">Accelerate Nottingham</a> is the first technology and growth-oriented flexible work space in the city offering its members thoughtfully-designed, collaborative space within Blenheim Chalcot’s exciting business community.</p>
                 </li>
@@ -199,9 +199,9 @@
                 <p class="lede">Providing services-in-kind to help each of the award winners.</p>
             </header>
             <ul class="sponsor-list">
-                <li class="sponsor third">
+                <li class="sponsor Large">
                     <a href="http://www.securityaware.biz/" target="_blank" class="Icon-wrap">
-                        <div class="sponsor-logo__front Mid security-aware"></div>
+                        <div class="Sponsor-logo Mid security-aware"></div>
                     </a>
                     <p class="sponsor__content"><a href="http://www.securityaware.biz/" target="_blank">Security Aware</a> is a data security and compliance specialist, helping businesses keep information safe through monitoring, testing and training.</p>
                 </li>
