--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Nott Tuesday: The meetup for Nottingham's tech scene" />
     <meta property="og:description" content="Our free, monthly event features a guest speaker and time to meet fellow founders, entrepreneurs and technologists. Come share, support and unwind with us." />
-    <meta property="og:image" content="./og-index.jpg" />
+    <meta property="og:image" content="http://notttuesday.com/og-index.jpg" />
 
 
     <!-- ICONS -->
@@ -115,53 +115,49 @@
 
     <ul class="sponsor-list">
 
-        <li class="sponsor half">
-            <a href="https://rolleragency.co.uk/" target="_blank" class="Icon-wrap">
-                <div class="sponsor-logo__front Large roller"></div>
-            </a>
+        <li class="sponsor Mid">
+            <a href="https://rolleragency.co.uk/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid roller"></div></a>
             <a href="https://rolleragency.co.uk/" target="_blank">Roller Agency</a>
             <p>A digital agency in the heart of Nottingham providing a full range of digital services including strategy, design and development across both apps and web products.</p>
         </li>
 
-        <li class="sponsor half">
-            <a href="http://www.wearejh.com/" target="_blank" class="Icon-wrap">
-                <div class="sponsor-logo__front Large g2"></div>
-            </a>
+        <li class="sponsor Mid">
+            <a href="http://www.wearejh.com/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid g2"></div></a>
             <a href="http://www.wearejh.com/" target="_blank">G2 Innovation</a>
-            <p>is a web agency working with exciting clients on challenging projects. They specialise in producing attractive, effective ecommerce websites.</p>
+            <p>A product design and technology development company, assisting at any stage of the process from ideation to prototyping and testing and helping companies finance their development through R&D tax relief and Patent Box.</p>
         </li>
 
-    </ul>
-
-    <ul class="sponsor-list">
-
-        <li class="sponsor third">
-            <a href="https://esperdesign.co.uk/" target="_blank" class="Icon-wrap"><div class="sponsor-logo__front Mid esper"></div></a>
+        <li class="sponsor Mid">
+            <a href="https://esperdesign.co.uk/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid esper"></div></a>
             <a href="https://esperdesign.co.uk/" target="_blank">Esper</a>
             <p>Bright ideas in black boxes. Esper Design have extensive experience with lighting, audio, still and moving images.</p>
         </li>
 
-        <li class="sponsor third">
-            <a href="http://www.d2n2lep.org/" target="_blank" class="Icon-wrap"><div class="sponsor-logo__front Mid d2n2"></div></a>
-            <a href="http://www.d2n2lep.org/" target="_blank">D2N2</a>
-            <p>The Local Enterprise Partnership for Derby, Derbyshire, Nottingham and Nottinghamshire.</p>
+
+        <li class="sponsor Mid">
+            <a href="http://www.securityaware.biz/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid security-aware"></div></a>
+            <a href="http://www.securityaware.biz/" target="_blank">Secuity Aware</a>
+            <p>Our services are comprehensively designed to minimise data security threats to companies and individuals alike.</p>
         </li>
 
-        <li class="sponsor third">
-            <a href="http://www.wearejh.com/" target="_blank" class="Icon-wrap"><div class="sponsor-logo__front Mid jh"></div></a>
+        <li class="sponsor Mid">
+            <a href="http://www.wearejh.com/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid jh"></div></a>
             <a href="http://www.wearejh.com/" target="_blank">JH</a>
             <p>is a web agency working with exciting clients on challenging projects. They specialise in producing attractive, effective ecommerce websites.</p>
         </li>
 
-    </ul>
-
-    <ul class="sponsor-list">
-
-        <li class="sponsor third">
-            <a href="http://www.securityaware.biz/" target="_blank" class="Icon-wrap"><div class="sponsor-logo__front Mid security-aware"></div></a>
-            <a href="http://www.securityaware.biz/" target="_blank">Secuity Aware</a>
-            <p>Our services are comprehensively designed to minimise data security threats to companies and individuals alike.</p>
+        <li class="sponsor Mid">
+            <a href="http://www.d2n2lep.org/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid d2n2"></div></a>
+            <a href="http://www.d2n2lep.org/" target="_blank">D2N2</a>
+            <p>The Local Enterprise Partnership for Derby, Derbyshire, Nottingham and Nottinghamshire.</p>
         </li>
+
+        <li class="sponsor Mid">
+            <a href="http://www.wearecaribe.com/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid caribe"></div></a>
+            <a href="http://www.wearecaribe.com/" target="_blank">Caribe Restaurant</a>
+            <p>Caribé Restaurant &amp; Bar is an upscale two-storey Caribbean Restaurant in the heart of Nottingham City near Nottingham Castle.</p>
+        </li>
+
 
     </ul>
 </section>
@@ -198,11 +194,19 @@
         </li>
 
         <li class="judge">
-            <a href="https://uk.linkedin.com/in/davideilbeck" target="_blank">
-                <img class="judge__photo" src="img/awards-2016/davideilbeck.jpg" alt="David Eilbeck">
+            <a href="https://www.linkedin.com/in/iannaylor1" target="_blank">
+                <img class="judge__photo" src="img/awards-2016/iannaylor.jpg" alt="David Eilbeck">
             </a>
-            <a class="judge__name" href="https://uk.linkedin.com/in/davideilbeck">David Eilbeck</a>
-            <span class="judge__role">Managing Director, G2 Innovation</span>
+            <a class="judge__name" href="https://www.linkedin.com/in/iannaylor1">Ian Naylor</a>
+            <span class="judge__role">CEO &amp; Founder, Appinstitute</span>
+        </li>
+
+        <li class="judge">
+            <a href="https://twitter.com/jonathanenglish" target="_blank">
+                <img class="judge__photo" src="img/awards-2016/jonathanenglish.jpg" alt="David Eilbeck">
+            </a>
+            <a class="judge__name" href="https://twitter.com/jonathanenglish">Jonathan English</a>
+            <span class="judge__role">Managing Director, Skeleton Productions</span>
         </li>
 
     </ul>
