--- a/awards/2014.html
+++ b/awards/2014.html
@@ -124,19 +124,19 @@
                 <p class="lede">Providing our £1,000 cash prize awards for each of our categories and providing food and drinks on the evening.</p>
             </header>
             <ul class="sponsor-list">
-                <li class="sponsor third">
-                    <a href="http://www.g2innovation.co.uk/" target="_blank" class="Icon-wrap" ><div class="sponsor-logo__front Mid g2"></div>                 <a href="http://www.g2innovation.co.uk/" target="_blank">G2 Innovation</a> is a design innovation consultancy thats supports businesses by providing the tools and resources that take the pain out of developing new ideas.
+                <li class="sponsor Mid">
+                    <a href="http://www.g2innovation.co.uk/" target="_blank" class="Icon-wrap" ><div class="Sponsor-logo Mid g2"></div>                 <a href="http://www.g2innovation.co.uk/" target="_blank">G2 Innovation</a> is a design innovation consultancy thats supports businesses by providing the tools and resources that take the pain out of developing new ideas.
                 </li>
-                <li class="sponsor third">
-                    <a href="http://www.esendex.co.uk/" target="_blank" class="Icon-wrap" ><div class="sponsor-logo__front Mid esendex"></div></a>
+                <li class="sponsor Mid">
+                    <a href="http://www.esendex.co.uk/" target="_blank" class="Icon-wrap" ><div class="Sponsor-logo Mid esendex"></div></a>
                     <a href="http://www.esendex.co.uk/" target="_blank">Esendex</a> provides SMS services to thousands of businesses around the world, from retailers and financial institutions to government bodies and education providers.
                 </li>
-                <li class="sponsor third">
-                    <a href="http://www.nextbusinessgeneration.org/" target="_blank" class="Icon-wrap" ><div class="sponsor-logo__front Mid next-business-generation"></div></a>
+                <li class="sponsor Mid">
+                    <a href="http://www.nextbusinessgeneration.org/" target="_blank" class="Icon-wrap" ><div class="Sponsor-logo Mid next-business-generation"></div></a>
                     <a href="http://www.nextbusinessgeneration.org/" target="_blank">Next Business Generation</a> is a business-accelerator programme designed to create successful start-ups in Nottingham&rsquo;s digital, clean-tech and life sciences sectors.
                 </li>
-                <li class="sponsor third">
-                    <a href="http://www.creativequarter.com/" target="_blank" class="Icon-wrap"><div class="sponsor-logo__front Mid creative-quarter"></div></a>
+                <li class="sponsor Mid">
+                    <a href="http://www.creativequarter.com/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid creative-quarter"></div></a>
                     <a href="http://www.creativequarter.com/" target="_blank">Creative Quarter</a> is Nottingham&rsquo;s flagship project for economic growth, enterprise and entrepreneurial spirit in and around the city&rsquo;s Lace Market and Hockley areas.
                 </li>
             </ul>
@@ -150,16 +150,16 @@
                 <p class="lede">Providing services-in-kind to help the award winning businesses of each category.</p>
             </header>
             <ul class="sponsor-list">
-                <li class="sponsor third">
-                    <a href="http://www.skeletonproductions.com/" target="_blank" class="Icon-wrap"><div class="sponsor-logo__front Mid skeleton-productions"></div></a>
+                <li class="sponsor Mid">
+                    <a href="http://www.skeletonproductions.com/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid skeleton-productions"></div></a>
                     <a href="http://www.skeletonproductions.com/" target="_blank">Skeleton Productions</a> produces engaging creative videos for UK businesses and brands. They have donated an animation worth &pound;4,000 for one of our winners.
                 </li>
-                <li class="sponsor third">
-                    <a href="http://www.shoosmiths.co.uk/" target="_blank" class="Icon-wrap"   ><div class="sponsor-logo__front Mid shoosmiths"></div></a>
+                <li class="sponsor Mid">
+                    <a href="http://www.shoosmiths.co.uk/" target="_blank" class="Icon-wrap"   ><div class="Sponsor-logo Mid shoosmiths"></div></a>
                     <a href="http://www.shoosmiths.co.uk/" target="_blank">Shoosmiths</a> is a major UK law firm working with startups to FTSE 250. They have donated legal advice worth &pound;750 for one of our winners.
                 </li>
-                <li class="sponsor third">
-                    <a href="http://www.securityaware.biz/" target="_blank" class="Icon-wrap"  ><div class="sponsor-logo__front Mid security-aware"></div></a>
+                <li class="sponsor Mid">
+                    <a href="http://www.securityaware.biz/" target="_blank" class="Icon-wrap"  ><div class="Sponsor-logo Mid security-aware"></div></a>
                     <a href="http://www.securityaware.biz/" target="_blank">Security Aware</a> is a data security and compliance specialist, helping businesses keep information safe through monitoring, testing and training.
                 </li>
             </ul>
@@ -173,16 +173,16 @@
                 <p class="lede">Our ongoing sponsors help us get great speakers in and provide drinks at our monthly events.</p>
             </header>
             <ul class="sponsor-list">
-                <li class="sponsor third">
-                     <a href="http://www.paypal.com/" target="_blank" class="Icon-wrap"><div class="sponsor-logo__front Mid paypal"></div></a>
+                <li class="sponsor Mid">
+                     <a href="http://www.paypal.com/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid paypal"></div></a>
                      <a href="http://www.paypal.com/" target="_blank">Paypal</a> makes it easy for businesses to get paid. Whether you&rsquo;re online or offline, in your shop or on the road, one simple PayPal account is all you need.
                 </li>
-                <li class="sponsor third">
-                    <a href="http://www.first-enterprise.co.uk/" target="_blank" class="Icon-wrap" ><div class="sponsor-logo__front Mid first-enterprise"></div></a>
+                <li class="sponsor Mid">
+                    <a href="http://www.first-enterprise.co.uk/" target="_blank" class="Icon-wrap" ><div class="Sponsor-logo Mid first-enterprise"></div></a>
                     <a href="http://www.first-enterprise.co.uk/" target="_blank">First Enterprise</a> is a leading business support organisation which supports the needs of pre-start and existing business owners in Nottingham and the East Midlands.
                 </li>
-                <li class="sponsor third">
-                    <a href="http://www.wearejh.com/" target="_blank" class="Icon-wrap"><div class="sponsor-logo__front Mid jh"></div></a>
+                <li class="sponsor Mid">
+                    <a href="http://www.wearejh.com/" target="_blank" class="Icon-wrap"><div class="Sponsor-logo Mid jh"></div></a>
                     <a href="http://www.wearejh.com/" target="_blank">JH</a> is a web agency working with exciting clients on challenging projects. They specialise in producing attractive, effective ecommerce websites.
                 </li>
             </ul>
